--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -2,7 +2,7 @@ account.confirmation.address.added=Your address was created.
 account.confirmation.address.removed=Your address was removed.
 account.confirmation.address.updated=Your address was updated.
 account.confirmation.default.address.changed=Your default address was updated.
-account.confirmation.forgotten.password.link.sent=After validation of your email address, an email will be sent to you to with the link to reset your password. Link will expire in 30 minutes.
+account.confirmation.forgotten.password.link.sent=Please enter the email address of your account to reset your password.
 account.confirmation.password.updated=Your password has been changed. Please log in to access your account.
 account.confirmation.payment.details.removed=Your payment details were removed.
 account.confirmation.profile.updated=Your profile has been updated.
@@ -21,8 +21,8 @@ address.lastName.invalid=Please enter a surname
 address.line1=Address Line 1
 address.line1.invalid=Please enter address Line 1
 address.line2=Address Line 2
-address.postcode=Postcode
-address.postcode.invalid=Please enter postcode
+address.postcode=Zipcode
+address.postcode.invalid=Please enter zipcode
 address.required=Fields marked* are required
 address.selectCountry=Please select a country
 address.surname=Surname
@@ -398,7 +398,7 @@ register.lastName.invalid=Please enter a surname
 register.new.customer=New Customer
 register.phone=Phone Number (Mobile Preferred)
 register.pwd=Password
-register.pwd.invalid=Please enter a strong password (at least 6 chars)
+register.pwd.invalid=Please enter a password with minimum 6 characters
 register.remember=Remember me on this computer
 register.submit=Register
 register.title=Title
