Defect fixed for surname

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -17,15 +17,15 @@ address.country.invalid=Please select a country
 address.default=Make this my default address
 address.firstName=First Name
 address.firstName.invalid=Please enter a first name
-address.lastName.invalid=Please enter a surname
+address.lastName.invalid=Please enter a lastname
 address.line1=Address Line 1
 address.line1.invalid=Please enter address Line 1
 address.line2=Address Line 2
 address.postcode=Zipcode
-address.postcode.invalid=Please enter zipcode
+address.postcode.invalid=Please enter Zipcode
 address.required=Fields marked* are required
 address.selectCountry=Please select a country
-address.surname=Surname
+address.surname=Last Name
 address.title=Title
 address.title.invalid=Please select a title
 address.title.pleaseSelect=Please select...
@@ -372,10 +372,10 @@ profile.email.invalid=Please enter a valid email
 profile.email.unique=The email you entered is not available
 profile.firstName=First Name
 profile.firstName.invalid=Please enter a first name
-profile.lastName=Surname
+profile.lastName=Last Name
 profile.firstName.format.invalid=Please enter valid first name
-profile.lastName.invalid=Please enter a surname
-profile.lastName.format.invalid=Please enter valid surname
+profile.lastName.invalid=Please enter a lastname
+profile.lastName.format.invalid=Please enter valid lastname
 profile.contactNumber=Contact Number
 profile.contactNumber.invalid=Please enter contact number
 profile.contactNumber.format.invalid=Please enter valid contact number
@@ -393,8 +393,8 @@ register.email=Email Address
 register.email.invalid=Please enter a valid email
 register.firstName=First Name
 register.firstName.invalid=Please enter a first name
-register.lastName=Surname
-register.lastName.invalid=Please enter a surname
+register.lastName=Last Name
+register.lastName.invalid=Please enter a lastname
 register.new.customer=New Customer
 register.phone=Phone Number (Mobile Preferred)
 register.pwd=Password
