--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -17,7 +17,7 @@ address.country.invalid=Please select a country
 address.default=Make this my default address
 address.firstName=First Name
 address.firstName.invalid=Please enter a first name
-address.lastName.invalid=Please enter a surname
+address.lastName.invalid=Please enter a lastname
 address.line1=Address Line 1
 address.line1.invalid=Please enter address Line 1
 address.line2=Address Line 2
@@ -25,7 +25,7 @@ address.postcode=Zipcode
 address.postcode.invalid=Please enter zipcode
 address.required=Fields marked* are required
 address.selectCountry=Please select a country
-address.surname=Surname
+address.surname=Last Name
 address.title=Title
 address.title.invalid=Please select a title
 address.title.pleaseSelect=Please select...
@@ -371,8 +371,8 @@ profile.email.invalid=Please enter a valid email
 profile.email.unique=The email you entered is not available
 profile.firstName=First Name
 profile.firstName.invalid=Please enter a first name
-profile.lastName=Surname
-profile.lastName.invalid=Please enter a surname
+profile.lastName=Last Name
+profile.lastName.invalid=Please enter a lastname
 profile.newPassword=New Password
 profile.newPassword.invalid=Please enter your new password
 profile.pwd=Password
@@ -387,8 +387,8 @@ register.email=Email Address
 register.email.invalid=Please enter a valid email
 register.firstName=First Name
 register.firstName.invalid=Please enter a first name
-register.lastName=Surname
-register.lastName.invalid=Please enter a surname
+register.lastName=Last Name
+register.lastName.invalid=Please enter a lastname
 register.new.customer=New Customer
 register.phone=Phone Number (Mobile Preferred)
 register.pwd=Password
