updated with spanish translation

--- a/bin/custom/energizer/energizercockpits/resources/energizercockpits/cockpit/localization/i3-label_es.properties
+++ b/bin/custom/energizer/energizercockpits/resources/energizercockpits/cockpit/localization/i3-label_es.properties
@@ -1,6 +1,6 @@
-energizercockpits.wizardConfig.basicacceleratordata=Datos de acelerador básicos
+energizercockpits.wizardConfig.basicacceleratordata=Datos de acelerador b\u00C3\u00A1sicos
 energizercockpits.ApparelVariantProduct.colour=Color
-energizercockpits.Apparel.genders=Géneros
-energizercockpits.ApparelSizeVariantProduct.size=Tamaño
+energizercockpits.Apparel.genders=G\u00C3\u00A9neros
+energizercockpits.ApparelSizeVariantProduct.size=Tama\u00C3\u00B1o
 energizercockpits.ApparelVariantProduct.style=Estilo
 energizercockpits.product.externalTaxes=Impuestos externos
