--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-customerRegistration_es.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-customerRegistration_es.properties
@@ -5,16 +5,16 @@ emailSubject=Registro de cliente
 myAccount=Mi cuenta
 storeFinder=Buscador de tiendas
 salutation=Estimado {0} {1}
-thankYouForRegistering=Gracias por registrarse en hybris, esperamos que disfrute de sus compras.
-registeredEmailInfo=La dirección de correo electrónico registrada es
-instructionsShoppingUrl=Para empezar a comprar, haga clic aquí
-instructionsAccountUrl=Para acceder a su cuenta, haga clic aquí: {0}Mi cuenta{1}
-instructionsForgottenPswdUrl=Si ha olvidado su contraseña, puede restablecerla en cualquier momento haciendo clic en este vínculo: {0}Actualizar mi contraseña{1}
-instructionsContactUs=Si necesita información, utilice la página {0}Contacto{1}, o bien póngase directamente en contacto con nuestro equipo de servicio al cliente llamando al 1800-383-7323 o por correo electrónico {2}.
+thankYouForRegistering=Gracias por registrarse en hybris,esperamos que disfrute de sus compras.
+registeredEmailInfo=La direcci\u00C3\u00B3n de correo electr\u00C3\u00B3nico registrada es
+instructionsShoppingUrl=Para empezar a comprar,haga clic aqu\u00C3\u00AD
+instructionsAccountUrl=Para acceder a su cuenta,haga clic aqu\u00C3\u00AD: {0}Mi cuenta{1}
+instructionsForgottenPswdUrl=Si ha olvidado su contrase\u00C3\u00B1a,puede restablecerla en cualquier momento haciendo clic en este v\u00C3\u00ADnculo: {0}Actualizar mi contrase\u00C3\u00B1a{1}
+instructionsContactUs=Si necesita informaci\u00C3\u00B3n,utilice la p\u00C3\u00A1gina {0}Contacto{1},o bien p\u00C3\u00B3ngase directamente en contacto con nuestro equipo de servicio al cliente llamando al 1800-383-7323 o por correo electr\u00C3\u00B3nico {2}.
 complimentaryClosing=Muchas gracias
 signature=Servicio al cliente
 help=Ayuda
 contactUs=Contacto
 contactUsPage=http://www.hybris.com/en/contact
 contactUsEmailAddress=customerservices@hybris.com
-termsAndCondition=Términos y condiciones
+termsAndCondition=T\u00C3\u00A9rminos y condiciones
