--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderInProcess_es.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderInProcess_es.properties
@@ -5,15 +5,15 @@ emailSubject=Your Order {0} is in process
 myAccount=My Account
 storeFinder=Store Finder
 salutation=Dear {0}
-thankYouForOrder=Thank you for shopping with us. We would like to provide you with an update on your recent purchase.
+thankYouForOrder=Gracias por su pedido. El n\u00FAmero de su pedido es {0}{1}{2} y el valor total es de {3}. Este correo electr\u00F3nico contiene el resumen completo de su pedido.  Por favor conserve este documento para sus registros.
 shippedItems=The following item(s) from Order {0}{1}{2} is in process:
 quantity=Ordered Quantity
 itemPrice=Ordered Item Price
 total=Ordered Total
 free=FREE
 track=You can track your delivery here: {0}
-paragraphContactUs=If we can help you with any enquiry, please check our {0}FAQ page{1}, use our {2}Contact Us{3} page, or contact our customer services team directly via phone +44 (0)20 / 7429 4175 or email {4}.
-paragraphContactUs_electronics=If we can help you with any enquiry, please use our {0}Contact Us{1} page, or contact our customer services team directly via phone +44 (0)20 / 7429 4175 or email {2}.
+paragraphContactUs=If we can help you with any enquiry,please check our {0}FAQ page{1},use our {2}Contact Us{3} page,or contact our customer services team directly via phone +44 (0)20 / 7429 4175 or email {4}.
+paragraphContactUs_electronics=If we can help you with any enquiry,please use our {0}Contact Us{1} page,or contact our customer services team directly via phone +44 (0)20 / 7429 4175 or email {2}.
 complimentaryClosing=Many Thanks
 signature=Customer Services
 help=Help
