--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-replenishmentOrderConfirmation_es.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-replenishmentOrderConfirmation_es.properties
@@ -1,39 +1,39 @@
 ## Please note that the syntax of the property name should be as follows:
 ## propertyName=some string
 ## Please DO NOT USE, property.name=some string
-emailSubject=Confirmación de reposición de pedido {0}
+emailSubject=Confirmaci\u00C3\u00B3n de reposici\u00C3\u00B3n de pedido {0}
 myAccount=Mi cuenta
 storeFinder=Buscador de tiendas
 salutation=Estimado {0} {1}
-thankYouForOrder=Ha solicitado una reposición de pedido {0} El total del pedido es {1}.
-totalChangeWarning=Pueden asignarse cambios en el precio o promociones en el momento del pedido programado; en tal caso, se aplicarán al pedido y se verá modificado el total correspondiente.
-manageReplenishmentSchedule=Para {0}gestionar la programación de reposiciones{1}, haga clic aquí. {2}Ver detalles de pedido programado{3}.
+thankYouForOrder=Gracias por su pedido. El n\u00FAmero de su pedido es {0}{1}{2} y el valor total es de {3}. Este correo electr\u00F3nico contiene el resumen completo de su pedido.  Por favor conserve este documento para sus registros.
+totalChangeWarning=Pueden asignarse cambios en el precio o promociones en el momento del pedido programado; en tal caso,se aplicar\u00C3\u00A1n al pedido y se ver\u00C3\u00A1 modificado el total correspondiente.
+manageReplenishmentSchedule=Para {0}gestionar la programaci\u00C3\u00B3n de reposiciones{1},haga clic aqu\u00C3\u00AD. {2}Ver detalles de pedido programado{3}.
 quantity=Cantidad
 itemPrice=Precio del producto
 total=Total
 free=GRATIS
-purchaseOrderNumber=Número de pedido de compra
+purchaseOrderNumber=N\u00C3\u00BAmero de pedido de compra
 costCenter=Centro de costes
-deliveryMethod=Método de entrega
-deliveryAddress=Dirección de entrega
+deliveryMethod=M\u00C3\u00A9todo de entrega
+deliveryAddress=Direcci\u00C3\u00B3n de entrega
 freeDelivery=Entrega gratuita
-deliveryETA=Su entrega debería llegar en {0} tras el envío
+deliveryETA=Su entrega deber\u00C3\u00ADa llegar en {0} tras el env\u00C3\u00ADo
 paymentDetails=Detalles del pago
 orderTotals=Totales del pedido
 paymentCardType=Pago mediante tarjeta {0}
-billingAddress=Dirección de facturación
+billingAddress=Direcci\u00C3\u00B3n de facturaci\u00C3\u00B3n
 subtotal=Subtotal
 savings=Ahorro
 delivery=Entrega
 includesTax=Su pedido incluye impuestos por valor de {0}
-paragraphAccountLocation=Si dispone de una cuenta registrada, también encontrará los detalles de su pedido en el {0}Historial de pedidos.{1}
-paragraphCreateAccount=Si no dispone de una cuenta, cree una ahora mismo. Podrá finalizar su próxima compra mucho más rápido utilizando la dirección de entrega y los detalles del pago guardados.
-paragraphDeliveryInfo=Consulte la {0}información de entrega{1} para obtener más detalles sobre la recepción de su pedido.
-paragraphContactUs=Si necesita información, utilice la página {0}Contacto{1}, o bien póngase directamente en contacto con nuestro equipo de servicio al cliente llamando al +44 (0)20 / 7429 4175 o por correo electrónico {2}.
+paragraphAccountLocation=Si dispone de una cuenta registrada,tambi\u00C3\u00A9n encontrar\u00C3\u00A1 los detalles de su pedido en el {0}Historial de pedidos.{1}
+paragraphCreateAccount=Si no dispone de una cuenta,cree una ahora mismo. Podr\u00C3\u00A1 finalizar su pr\u00C3\u00B3xima compra mucho m\u00C3\u00A1s r\u00C3\u00A1pido utilizando la direcci\u00C3\u00B3n de entrega y los detalles del pago guardados.
+paragraphDeliveryInfo=Consulte la {0}informaci\u00C3\u00B3n de entrega{1} para obtener m\u00C3\u00A1s detalles sobre la recepci\u00C3\u00B3n de su pedido.
+paragraphContactUs=Si necesita informaci\u00C3\u00B3n,utilice la p\u00C3\u00A1gina {0}Contacto{1},o bien p\u00C3\u00B3ngase directamente en contacto con nuestro equipo de servicio al cliente llamando al +44 (0)20 / 7429 4175 o por correo electr\u00C3\u00B3nico {2}.
 complimentaryClosing=Muchas gracias
 signature=Servicio al cliente
 help=Ayuda
 contactUs=Contacto
 contactUsPage=http://www.hybris.com/en/contact
 contactUsEmailAddress=customerservices@hybris.com
-termsAndCondition=Términos y condiciones
+termsAndCondition=T\u00C3\u00A9rminos y condiciones
