--- a/bin/custom/energizer/energizerfulfilmentprocess/resources/localization/energizerfulfilmentprocess-locales_es.properties
+++ b/bin/custom/energizer/energizerfulfilmentprocess/resources/localization/energizerfulfilmentprocess-locales_es.properties
@@ -15,29 +15,29 @@
 #
 # yourcustomlocalekey=value
 
-type.ConsignmentProcess.name=Proceso de consignación
-type.ConsignmentProcess.description=Proceso de consignación
+type.ConsignmentProcess.name=Proceso de consignaci\u00C3\u00B3n
+type.ConsignmentProcess.description=Proceso de consignaci\u00C3\u00B3n
 
 type.ConsignmentProcess.done.name=Listo
 type.ConsignmentProcess.done.description=Listo
 
-type.ConsignmentProcess.waitingForConsignment.name=Esperando consignación
-type.ConsignmentProcess.waitingForConsignment.description=Esperando consignación
+type.ConsignmentProcess.waitingForConsignment.name=Esperando consignaci\u00C3\u00B3n
+type.ConsignmentProcess.waitingForConsignment.description=Esperando consignaci\u00C3\u00B3n
 
-type.ConsignmentProcess.warehouseConsignmentState.name=Estado de consignación de almacén
-type.ConsignmentProcess.warehouseConsignmentState.description=Estado de consignación de almacén
+type.ConsignmentProcess.warehouseConsignmentState.name=Estado de consignaci\u00C3\u00B3n de almac\u00C3\u00A9n
+type.ConsignmentProcess.warehouseConsignmentState.description=Estado de consignaci\u00C3\u00B3n de almac\u00C3\u00A9n
 
-type.BusinessProcess.consignmentProcesses.name=Procesos de consignación
-type.BusinessProcess.consignmentProcesses.description=Procesos de consignación
+type.BusinessProcess.consignmentProcesses.name=Procesos de consignaci\u00C3\u00B3n
+type.BusinessProcess.consignmentProcesses.description=Procesos de consignaci\u00C3\u00B3n
 
 type.BusinessProcess.order.name=Pedido
 type.BusinessProcess.order.description=Pedido
 
-type.ConsignmentProcess.consignment.name=Consignación
-type.ConsignmentProcess.consignment.description=Consignación
+type.ConsignmentProcess.consignment.name=Consignaci\u00C3\u00B3n
+type.ConsignmentProcess.consignment.description=Consignaci\u00C3\u00B3n
 
-type.ConsignmentProcess.consignmentProcesses.name=Procesos de consignación
-type.ConsignmentProcess.consignmentProcesses.description=Procesos de consignación
+type.ConsignmentProcess.consignmentProcesses.name=Procesos de consignaci\u00C3\u00B3n
+type.ConsignmentProcess.consignmentProcesses.description=Procesos de consignaci\u00C3\u00B3n
 
 type.ConsignmentProcess.order.name=Pedido
 type.ConsignmentProcess.order.description=Pedido
@@ -48,17 +48,17 @@ type.ConsignmentProcess.parentProcess.description=Proceso principal
 type.Order.orderProcess.name=Proceso de pedido
 type.Order.orderProcess.description=Proceso de pedido
 
-type.Consignment.consignmentProcesses.name=Procesos de consignación
-type.Consignment.consignmentProcesses.description=Procesos de consignación
+type.Consignment.consignmentProcesses.name=Procesos de consignaci\u00C3\u00B3n
+type.Consignment.consignmentProcesses.description=Procesos de consignaci\u00C3\u00B3n
 
 type.OrderStatus.PAYMENT_AMOUNT_RESERVED.name=Pago reservado
 type.OrderStatus.PAYMENT_AMOUNT_NOT_RESERVED.name=Pago no reservado
 type.OrderStatus.PAYMENT_CAPTURED.name=Pago capturado
 type.OrderStatus.PAYMENT_NOT_CAPTURED.name=Pago no capturado
 type.OrderStatus.FRAUD_CHECKED.name=Fraude comprobado
-type.OrderStatus.ORDER_SPLIT.name=Partición de pedido
+type.OrderStatus.ORDER_SPLIT.name=Partici\u00C3\u00B3n de pedido
 type.OrderStatus.PROCESSING_ERROR.name=Error de procesamiento
-type.OrderStatus.WAIT_FRAUD_MANUAL_CHECK.name=Esperando validación manual
+type.OrderStatus.WAIT_FRAUD_MANUAL_CHECK.name=Esperando validaci\u00C3\u00B3n manual
 type.OrderStatus.SUSPENDED.name=Suspendido
 
 type.ConsignmentStatus.READY_FOR_PICKUP=Listo para recogida
@@ -66,8 +66,8 @@ type.ConsignmentStatus.PICKUP_COMPLETE=Recogido
 type.ConsignmentStatus.SHIPPED=Enviada
 type.ConsignmentStatus.CANCELLED=Cancelado
 type.ConsignmentStatus.WAITING=Esperando
-type.ConsignmentStatus.PICKPACK=Preparación
+type.ConsignmentStatus.PICKPACK=Preparaci\u00C3\u00B3n
 type.ConsignmentStatus.READY=Listo
 
-message.ticket.orderinreview.title=EL PEDIDO SE HA COLOCADO PARA REVISIÓN
-message.ticket.orderinreview.content=El pedido {0} se ha colocado para revisión
+message.ticket.orderinreview.title=EL PEDIDO SE HA COLOCADO PARA REVISI\u00C3\u0093N
+message.ticket.orderinreview.content=El pedido {0} se ha colocado para revisi\u00C3\u00B3n
