--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/site-energizer_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/site-energizer_es.properties
@@ -5,37 +5,37 @@
 
 cart.checkout=CHECKOUT
 cart.items={0} item(s)
-cart.page.checkout=Checkout
-cart.page.continue=Continue Shopping
-cart.page.title=Your Shopping Cart
+cart.page.checkout=Revisi\u00F3n
+cart.page.continue=Seguir Comprando
+cart.page.title=Su Carrito
 cart.page.total=Total:
 cart.view=VIEW CART
 category.navTitle=Shop by Category
 minicart.cart.alt=Your Shopping Cart
 text.actions=Actions
-text.addToCart.outOfStock=Out of Stock
-text.addToCart=Add to cart
+text.addToCart.outOfStock=Agotado
+text.addToCart=A\u00F1adir a carrito
 text.address=Address
-text.checkout.noDeliveryModes=Please check the delivery address. If not selected already, please select the delivery address first and try again.
-text.checkout=Checkout
-text.currency=Select Currency
+text.checkout.noDeliveryModes=Por favor,verifique la direcci\u00F3n de entrega. Si no est\u00E1 seleccionada,por favor seleccione la direcci\u00F3n de entrega primero y vuelva a intentarlo.
+text.checkout=Revisi\u00F3n
+text.currency=Seleccionar moneda
 text.default=Default
-text.deliveryAddress=Delivery Address
-text.deliveryMethod=Delivery Method
-text.edit=Edit
+text.deliveryAddress=Direcci\u00F3n De Entrega
+text.deliveryMethod=Forma De Entrega
+text.edit=Editar
 text.expires=Expires
 text.free=FREE
-text.iconCartRemove=Remove
-text.itemPrice=Item Price
-text.language=Select Language
+text.iconCartRemove=Eliminar
+text.itemPrice=Precio de art\u00EDculo
+text.language=Seleccione Idioma
 text.paymentMethod=Payment Method
 text.pleaseSelect=Please select...
-text.popupCartTitle=Your Shopping Cart
-text.product=Product
-text.productDetails=Product Details
-text.quantity=Quantity
-text.remove=Remove
-text.search=Search
+text.popupCartTitle=Su Carrito
+text.product=Producto
+text.productDetails=Detalles Del Producto
+text.quantity=Cantidad
+text.remove=Eliminar
+text.search=B\u00FAsqueda
 text.setDefault=Set as default
 text.skipToContent=Skip to content
 text.skipToNavigation=Skip to navigation menu
@@ -45,30 +45,30 @@ text.showFacet=Show Refinement
 text.total=Total
 text.updates=Updates
 text.view=View
-text.volumePrices=Volume prices available
+text.volumePrices=Precios por volumen disponibles
 text.orderDetails=Order Details
-address.postcode.invalid=Please enter zip code
-address.postcode=Zip Code
+address.postcode.invalid=Por favor,ingrese el c\u00F3digo postal
+address.postcode=C\u00F2digo Postal
 
-storeFinder.postcode.town=Zip Code / Town
+storeFinder.postcode.town=C\u00F3digo postal / Ciudad
 storelocator.error.no.results.subtitle=Check that you entered a valid zip code or place name.
 
-account.confirmation.signout.subtitle=Your cart will be waiting for you when you sign back in.
+account.confirmation.signout.subtitle=Su carrito estar\u00E1 esperando por usted cuando inicie nuevamente su sesion.
 basket.add.free.gift=Add your free gift to Cart
-basket.add.to.basket=Add to cart
-basket.added.to.basket=Added to Your Shopping Cart
+basket.add.to.basket=A\u00F1adir al carrito
+basket.added.to.basket=A\u00F1adido a su Carrito
 basket.confirmation.items.added=Your saved items were added to your cart.
-basket.error.occurred=Error occurred while adding to Cart.
-basket.error.product.removed=Sorry, one or more products were removed from your cart as they are not in stock or are no longer available.
-basket.information.merge.successful=The Cart saved against your user account and your current cart have been merged. Click here to visit your cart.
-basket.information.quantity.noItemsAdded.noStock=Sorry, there is insufficient stock for your cart.  {0}
-basket.information.quantity.reducedNumberOfItemsAdded.lowStock=A lower quantity of this product has been added to your cart due to insufficient stock.  {0}
-basket.error.quantity.multiple.invalid=Please provide a positive number to update the quantity of an item.
-basket.page.message.remove=Product has been removed from your cart.
+basket.error.occurred=Se produjo un error al agregar al carrito
+basket.error.product.removed=Lo sentimos,uno o m\u00E1s productos sean retirados de su carrito,ya que no hay en inventario o ya no est\u00E1n disponibles.
+basket.information.merge.successful=El carrito guardado contra de su cuenta de usuario y su carrito actual se han fusionado. Haga clic aqu\u00ED para visitar su carrito.
+basket.information.quantity.noItemsAdded.noStock=Lo sentimos,no hay suficiente inventario para su compra. {0}
+basket.information.quantity.reducedNumberOfItemsAdded.lowStock=Una menor cantidad de este producto ha sido a\u00F1adida a su carrito,debido a inventario insuficiente.
+basket.error.quantity.multiple.invalid=Por favor,ingrese un n\u00FAmero positivo para actualizar la cantidad de un art\u00EDculo.
+basket.page.message.remove=El producto ha sido retirado de su carrito.
 basket.page.viewFuture.not.multisku= The selected code {0} is not a multidimensional product.
-basket.page.title.yourItems=Your Cart
+basket.page.title.yourItems=Su Carrito
 basket.view.basket=View cart
 basket.your.shopping.basket=Your Shopping Cart
-breadcrumb.cart=Cart
-popup.cart.title=Your Shopping Cart
+breadcrumb.cart=Carrito
+popup.cart.title=Su carrito
 
