--- a/bin/custom/energizeraccountsummary/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizeraccountsummary/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -5,28 +5,28 @@ text.company.viewAccountSummary=Ver resumen de cuentas
 text.company.accountsummary.details=Detalles de estado de cuentas
 
 text.company.unittree.accountsummary.label=Resumen de cuentas
-text.company.unittree.accountsummary=Resumen de cuentas muestra los documentos financieros que representan las transacciones con su organización.
+text.company.unittree.accountsummary=Resumen de cuentas muestra los documentos financieros que representan las transacciones con su organizaci\u00C3\u00B3n.
 
-text.company.accountsummary.daterange.error=Error. El formato del rango de fechas no es válido.
-text.company.accountsummary.amountrange.error=Error. El formato del rango de cantidades no es válido.
+text.company.accountsummary.daterange.error=Error,el formato de rango de fechas no es v\u00E1lido.
+text.company.accountsummary.amountrange.error=Error,el formato de intervalo de cantidad es no es v\u00E1lido.
 text.company.accountsummary.noresult.info=No se han encontrado resultados.
 
 
-text.company.accountsummary.resultcount.label=Visualizando <em id="numberOfResult">0</em> de <em id="totalResult">0</em>
+text.company.accountsummary.resultcount.label=Visualizando <em id=\"numberOfResult\">0</em> de <em id=\"totalResult\">0</em>
 text.company.accountsummary.businessunitid.label=ID de unidad de negocio:
-text.company.accountsummary.creditrep.label=Informe de crédito:
-text.company.accountsummary.creditline.label=Línea de crédito:
+text.company.accountsummary.creditrep.label=Informe de cr\u00C3\u00A9dito:
+text.company.accountsummary.creditline.label=L\u00C3\u00ADnea de cr\u00C3\u00A9dito:
 text.company.accountsummary.openbalance.label=Balance pendiente:
 text.company.accountsummary.pastduebalance.label=Balance adeudado:
 text.company.accountsummary.currentbalance.label=Balance actual
-text.company.accountsummary.sorthighest.label=Más alto
-text.company.accountsummary.sortlowest.label=Más bajo
+text.company.accountsummary.sorthighest.label=M\u00C3\u00A1s alto
+text.company.accountsummary.sortlowest.label=M\u00C3\u00A1s bajo
 text.company.accountsummary.openstatus.label=Documentos abiertos
 text.company.accountsummary.closedstatus.label=Documentos cerrados
 text.company.accountsummary.allstatus.label=Todo
 text.company.accountsummary.status.label=Estado
 text.company.accountsummary.documentType.label=Tipo
-text.company.accountsummary.documentNumber.label=N.º documento
+text.company.accountsummary.documentNumber.label=N.\u00C2\u00BA documento
 text.company.accountsummary.date.label=Fecha de documento
 text.company.accountsummary.dueDate.label=Fecha de vencimiento
 text.company.accountsummary.amount.label=Importe original
@@ -35,13 +35,13 @@ text.company.accountsummary.documentMedia.label=Ver documento
 text.company.accountsummary.documentMedia.view.label=Ver
 text.company.accountsummary.b2bunit.label=Unidad B2B:
 
-text.company.accountsummary.showmoreresultlink.label=Mostrar más resultados
+text.company.accountsummary.showmoreresultlink.label=Mostrar m\u00C3\u00A1s resultados
 text.company.accountsummary.from.label=De:
 text.company.accountsummary.to.label=A:
 
 text.company.accountsummary.button.search=Buscar
 text.company.accountsummary.button.pay=Pagar
-text.company.accountsummary.days.label=Días
+text.company.accountsummary.days.label=D\u00C3\u00ADas
 text.company.accountsummary.open.label=Abrir
 text.company.accountsummary.closed.label=Cerrado
 
