OrderBlock Code Fixes and personalCare Catalog Setup

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -129,6 +129,7 @@ breadcrumb.home=Inicio
 breadcrumb.login=Iniciar Sesi\u00F3n
 breadcrumb.not.found=P\u00E1gina no encontrada
 checkout.checkout=Revisar
+checkout.blocked.order=Solicitar bloqueado
 checkout.deliveryAddress.notSelected=Por favor ingrese una direcci\u00F3n de entrega para su pedido
 checkout.deliveryMethod.notSelected=Por favor,seleccione forma de entrega para su pedido
 checkout.error.invalid.accountType=Su cuenta no le permite salir por ac\u00E1.
