--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -221,6 +221,7 @@ checkout.multi.continueToSingleStep=Continue to single-step checkout
 checkout.multi.sampleLandingPage.text=This is a sample landing page.  Please add your own implementation.
 costCenter.title=Title
 costCenter.title.pleaseSelect=Please select...
+checkout.summary.deliveryDate.header = Delivery Date
 error.bugetcode.notfound=Budget code is not valid
 forgottenPwd.description=Por favor,ingrese la direcci\u00F3n de correo electr\u00F3nico para su cuenta. Un enlace para cambiar su contrase\u00F1a le ser\u00E1 enviado por correo electr\u00F3nico.
 forgottenPwd.email=Direcci\u00F3n de Correo Electr\u00F3nico
