--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -1442,7 +1442,7 @@ text.account.excelUpload.badDataForQuantity= One or more records have bad data f
 text.account.excelUpload.fileNotFound= File not Available to process...
 text.account.excelUpload.unableToConvert=Unable to process the uploaded file
 text.account.excelUpload.noRowsFound=No Rows Found in the Uploaded file
-text.account.orderHistory.referenceNumber = Order Reference
+text.account.orderHistory.referenceNumber = Reference Number
 text.account.orderHistory.orderType = Order Type
 text.account.MOQ = MOQ
 text.account.Customer.Product.Name= Customer Product Name
@@ -1451,7 +1451,7 @@ text.account.Shipped.Quantity = Shipped Quantity
 text.order.viewInvoice = view Invoice
 text.account.order.offline=Offline
 text.account.order.portal=Portal
-text.account.orderHistory.sap.orderNumber =SAP Order No
+text.account.orderHistory.sap.orderNumber =Order No
 text.account.orderHistory.approvalStatus= Status
 text.account.orderHistory.orderValue=Order Value
 text.account.orderHistory.shippingDetaiils=Shipping Details
@@ -1461,7 +1461,7 @@ text.account.orderHistory.orderPlaced= Order Placed On
 text.account.orderHistory.poNumber  =Purchase Order Number
 
 
-text.account.quickorder.enterwholenumber=enter a whole number
-text.account.quickorder.enterpositivenumber=enter a positive number or non zero number
-text.account.quickorder.entermoqmultiples=enter multiples of MOQ(Minimum Orderding Quantity)
-text.account.quickorder.inputvalidnumber=input a valid number
+text.account.quickorder.enterwholenumber=Enter a whole number
+text.account.quickorder.enterpositivenumber=Enter a positive number or non zero number
+text.account.quickorder.entermoqmultiples=Enter multiples of MOQ(Minimum Orderding Quantity)
+text.account.quickorder.inputvalidnumber=Input a valid number
