updated spanish dateformat

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -1343,9 +1343,9 @@ text.quotes.negotiateQuoteButton.displayName=Request Re-Quote
 text.quotes.orderStatusDetails.label=Quote Status Details
 text.remove=Eliminar
 text.setDefault=Set as default
-text.store.dateformat=MM / DD /AAAA
-text.store.dateformat.datepicker.selection=MM / DD /AAAA
-text.store.dateformat.datepicker.selection.hint=MM / DD /AAAA
+text.store.dateformat=MM/dd/yyyy
+text.store.dateformat.datepicker.selection=mm/dd/yy
+text.store.dateformat.datepicker.selection.hint=mm/dd/yyyy
 text.storefinder.desktop.page.totalResults={0} Stores found
 text.storefinder.desktop.page.currentPage={0} of {1}
 text.storefinder.desktop.page.firstPage=&laquo;
