Code  changes for segment , Family Group

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -111,6 +111,9 @@ basket.page.update=Update
 basket.page.updateMultiD=Edit Quantities
 basket.page.viewFuture=Future Availability
 basket.page.viewFuture.unavailable=Future stock system is unavailable, please try again later.
+basket.page.segmentName=Segment
+basket.page.familyName=Family
+basket.page.groupName=Group
 basket.potential.promotions=Potential Promotions
 basket.received.promotions=Received Promotions
 basket.restoration=Welcome back, your basket was restored.
