--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -111,6 +111,9 @@ basket.page.update=Actualizaci\u00F3n
 basket.page.updateMultiD=Editar Cantidades
 basket.page.viewFuture=Disponibilidad futura
 basket.page.viewFuture.unavailable=Future stock system is unavailable,please try again later.
+basket.page.segmentName=Segmento
+basket.page.familyName=Familia
+basket.page.groupName=Grupo
 basket.potential.promotions=Promociones potenciales
 basket.received.promotions=Promociones recibidas
 basket.restoration=Bienvenido de nuevo,su carrito fue restaurado.
