--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -84,7 +84,7 @@ basket.page.prdCode=Product
 basket.page.cmirId=Customer Material ID
 basket.page.shipFrom=Shipping Point
 basket.page.uom=Unit Of Ordering
-basket.page.moq=MOQ
+basket.page.moq=Minimum Ordering Quantity
 basket.page.customerMaterialId=Customer Material Id
 basket.page.customerProductName=Customer Product Name
 basket.page.MaterialId=Material ID
