--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -83,8 +83,8 @@ basket.page.unitPrice=Ordering Unit price
 basket.page.prdCode=ID del Material
 basket.page.cmirId=ID del CMIR
 basket.page.shipFrom=Enviar desde
-basket.page.uom=UOM
-basket.page.moq=MOQ
+basket.page.uom=Unidad de Ordenaci\u00F3n
+basket.page.moq=M\u00EDnimo de pedido Cantidad
 basket.page.customerMaterialId=ID del Material del cliente
 basket.page.customerProductName=Nombre del producto del cliente
 basket.page.MaterialId=ID del Material
