order management changes

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -629,7 +629,7 @@ text.account.orderApproval.orderStatus=Order Status
 text.account.orderApproval.rejectButton.displayName=Reject
 text.account.orderApprovalDashBoard.actions=Actions
 text.account.orderApprovalDashBoard.orderCreated=Order Created
-text.account.orderApprovalDashBoard.orderNumber=Order Number
+text.account.orderApprovalDashBoard.orderNumber=Reference Number
 text.account.orderApprovalDashBoard.orderStatus=Order Status
 text.account.orderApprovalDashBoard.purchaseOrderNumber=P.O.No\:
 text.account.orderApprovalDashBoard.viewOrdersPendingForApproval=Orders pending for your approval
