ForgotPassword and CustomerRegistration Email issues are fixed. and corrected the Properties with contact-us, link and t&c were added

--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-customerRegistration_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-customerRegistration_en.properties
@@ -5,7 +5,7 @@ emailSubject=Customer Registration
 myAccount=My Account
 storeFinder=Store Finder
 salutation=Dear {0} {1}
-thankYouForRegistering=Thank you for registering with hybris, we hope you&rsquo;ll enjoy shopping with us.
+thankYouForRegistering=Thank you for registering with us, we hope you&rsquo;ll enjoy shopping with us.
 registeredEmailInfo=Your registered email address is
 instructionsShoppingUrl=To start shopping please click here
 instructionsAccountUrl=To access your account please click here: {0}My Account{1}
@@ -15,6 +15,6 @@ complimentaryClosing=Many Thanks
 signature=Customer Services
 help=Help
 contactUs=Contact Us
-contactUsPage=http://www.hybris.com/en/contact
-contactUsEmailAddress=customerservices@hybris.com
+contactUsPage=http://www.energizerholdings.com/en/pages/contactus.aspx
+contactUsEmailAddress=customercare@energizer.com
 termsAndCondition=Terms &amp; Conditions
