--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-forgottenPassword_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-forgottenPassword_en.properties
@@ -14,6 +14,6 @@ complimentaryClosing=Many Thanks
 signature=Customer Services
 help=Help
 contactUs=Contact Us
-contactUsPage=http://www.hybris.com/en/contact
-contactUsEmailAddress=customerservices@hybris.com
+contactUsPage=http://www.energizerholdings.com/en/pages/contactus.aspx
+contactUsEmailAddress=customercare@energizer.com
 termsAndCondition=Terms &amp; Conditions
