--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-forgottenPassword_es.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-forgottenPassword_es.properties
@@ -14,6 +14,6 @@ complimentaryClosing=Muchas gracias
 signature=Servicio al cliente
 help=Ayuda
 contactUs=Contacto
-contactUsPage=http://www.hybris.com/en/contact
-contactUsEmailAddress=customerservices@hybris.com
+contactUsPage=http://www.energizerholdings.com/en/pages/contactus.aspx
+contactUsEmailAddress=customercare@energizer.com
 termsAndCondition=T\u00C3\u00A9rminos y condiciones
