--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-customerRegistration_es.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-customerRegistration_es.properties
@@ -5,7 +5,7 @@ emailSubject=Registro de cliente
 myAccount=Mi cuenta
 storeFinder=Buscador de tiendas
 salutation=Estimado {0} {1}
-thankYouForRegistering=Gracias por registrarse en hybris,esperamos que disfrute de sus compras.
+thankYouForRegistering=Gracias por registrarse en us,esperamos que disfrute de sus compras.
 registeredEmailInfo=La direcci\u00C3\u00B3n de correo electr\u00C3\u00B3nico registrada es
 instructionsShoppingUrl=Para empezar a comprar,haga clic aqu\u00C3\u00AD
 instructionsAccountUrl=Para acceder a su cuenta,haga clic aqu\u00C3\u00AD: {0}Mi cuenta{1}
@@ -15,6 +15,6 @@ complimentaryClosing=Muchas gracias
 signature=Servicio al cliente
 help=Ayuda
 contactUs=Contacto
-contactUsPage=http://www.hybris.com/en/contact
-contactUsEmailAddress=customerservices@hybris.com
+contactUsPage=http://www.energizerholdings.com/en/pages/contactus.aspx
+contactUsEmailAddress=customercare@energizer.com
 termsAndCondition=T\u00C3\u00A9rminos y condiciones
