Ship From property changes

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -82,7 +82,7 @@ basket.page.itemPrice=Precio del art\u00EDculo
 basket.page.unitPrice=Ordering Unit price
 basket.page.prdCode=ID del Material
 basket.page.cmirId=ID del CMIR
-basket.page.shipFrom=Enviar desde
+basket.page.shipFrom=kapal Ti
 basket.page.uom=Unidad de Ordenaci\u00F3n
 basket.page.moq=M\u00EDnimo de pedido Cantidad
 basket.page.customerMaterialId=ID del Material del cliente
