forgot password label changed

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -405,7 +405,7 @@ register.title=Title
 register.title.invalid=Please select a title
 registration.confirmation.message.subtitle=Please check your email to verify your email address.
 registration.confirmation.message.title=Thank you for registering.
-registration.error.account.exists.subtitle=If you forgot your password,please use the Forgotten Password link.
+registration.error.account.exists.subtitle=If you forgot your password,please use the Generate New Password link.
 registration.error.account.exists.title=An account already exists for this email address.
 replenishmentScheduleForm.activateDaily=Activate daily
 replenishmentScheduleForm.activateMonthly=Activate monthly
