Refinements property fixes

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -473,7 +473,7 @@ search.nav.facetShowMore_style=more styles...
 search.nav.facetShowMore_fit=more fits...
 search.nav.facetTitle=Shop by {0}
 search.nav.facetValueCount=({0})
-search.nav.refinements=Refinements
+search.nav.refinements=Refine Por
 search.nav.removeAttribute=Remove Attribute
 search.nav.resultsForStore=Results for: {0}
 search.no.results=No Results Found
