fixes for search with empty should not display of " "

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -489,6 +489,7 @@ search.page.lastPage=&raquo;
 search.page.linkNextPage=Next Page
 search.page.linkPreviousPage=Previous Page
 search.page.searchText=You searched for "{0}"
+search.page.searchText.exceptTerm=You searched for
 search.page.showAllResults=Show all
 search.page.showPageResults=Show paginated
 search.page.sortTitle=Sort by\:
