--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -482,7 +482,8 @@ search.page.firstPage=&laquo;
 search.page.lastPage=&raquo;
 search.page.linkNextPage=Next Page
 search.page.linkPreviousPage=Previous Page
-search.page.searchText=Ud. busc\u00F3 {0} \"\"
+search.page.searchText=Ud. busc\u00F3 \"{0}\"
+search.page.searchText.exceptTerm=Ud. busc\u00F3 
 search.page.showAllResults=Show all
 search.page.showPageResults=Show paginated
 search.page.sortTitle=Sort by:
