contact us changed

--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderConfirmation_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderConfirmation_en.properties
@@ -32,7 +32,7 @@ complimentaryClosing=Many Thanks
 signature=Customer Services
 help=Help
 contactUs=Contact Us
-contactUsPage=http://www.hybris.com/en/contact
+contactUsPage=http://www.energizerholdings.com/en/pages/contactus.aspx
 contactUsEmailAddress=customerservices@hybris.com
 termsAndCondition=Terms &amp; Conditions
 receivedPromotions=Received Promotions
