--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderInProcess_es.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderInProcess_es.properties
@@ -18,6 +18,6 @@ complimentaryClosing=Many Thanks
 signature=Customer Services
 help=Help
 contactUs=Contact Us
-contactUsPage=http://www.hybris.com/en/contact
+contactUsPage=http://www.energizerholdings.com/en/pages/contactus.aspx
 contactUsEmailAddress=customerservices@hybris.com
 termsAndCondition=Terms &amp; Conditions
