--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderPendingApproval_de.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderPendingApproval_de.properties
@@ -33,7 +33,7 @@ complimentaryClosing=Vielen Dank
 signature=Kundendienst
 help=Hilfe
 contactUs=Kontakt
-contactUsPage=http://www.hybris.com/en/contact
+contactUsPage=http://www.energizerholdings.com/en/pages/contactus.aspx
 contactUsEmailAddress=customerservices@hybris.com
 termsAndCondition=Allgemeine Geschäftsbedingungen
 UOM =UOM
