--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderPendingApproval_es.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderPendingApproval_es.properties
@@ -33,6 +33,6 @@ complimentaryClosing=Muchas gracias
 signature=Servicio al cliente
 help=Ayuda
 contactUs=Contacto
-contactUsPage=http://www.hybris.com/en/contact
+contactUsPage=http://www.energizerholdings.com/en/pages/contactus.aspx
 contactUsEmailAddress=customerservices@hybris.com
 termsAndCondition=T\u00C3\u00A9rminos y condiciones
