defect reported from client and defect in qc

--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderConfirmation_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderConfirmation_en.properties
@@ -5,7 +5,7 @@ emailSubject=Order Confirmation {0}
 myAccount=My Account
 storeFinder=Store Finder
 salutation=Hi
-thankYouForOrder=Your order reference number is {0}{1}{2} and the total cost is {3}. This email contains a complete summary of your order. Please retain this confirmation for your records.
+thankYouForOrder=Your reference number is {0}{1}{2} and the total cost is {3}. This email contains a complete summary of your order. Please retain this confirmation for your records.
 quantity=Quantity
 itemPrice=Item Price
 total=Total
