matching properties in es properties file and added Cancelled status

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -594,6 +594,22 @@ text.account.order.status.display.pending.merchant.approval=Pending Merchant App
 text.account.order.status.display.quote.approved=Quote Approved
 text.account.order.status.display.quote.rejected=Quote Rejected
 text.account.order.status.display.rejected=Rejected
+text.account.order.status.display.IN_PROCESS=In Process
+text.account.order.status.display.PENDING_APPROVAL=Pending Approval
+text.account.order.status.display.APPROVED=Approved
+text.account.order.status.display.CREATED=Created
+text.account.order.status.display.PENDING=Pending
+text.account.order.status.display.B2B_PROCESSING_ERROR=Process Error
+text.account.order.status.display.ASSIGNED_TO_ADMIN=Assigned To Admin
+text.account.order.status.display.CHECKED_INVALID=Checked Invalid
+text.account.order.status.display.SHIPPED=Shipped
+text.account.order.status.display.INVOICED=Invoiced
+text.account.order.status.display.REJECTED=Rejected
+text.account.order.status.display.REJECTED_BY_MERCHANT=Rejected By Merchant
+text.account.order.status.display.PENDING_APPROVAL_FROM_MERCHANT=Pending Approval From Merchant
+text.account.order.status.display.REJECTED_BY_MERCHANT=Rejected By Merchant
+text.account.order.status.display.OPEN=Open
+text.account.order.status.display.CANCELLED=Cancelled
 text.account.order.status.title=Estado
 text.account.order.subtotal=Subtotal \\:
 text.account.order.title.deliveryItems                   = Delivery Items
