email template updated

--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-customerRegistration_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-customerRegistration_en.properties
@@ -5,16 +5,17 @@ emailSubject=Customer Registration
 myAccount=My Account
 storeFinder=Store Finder
 salutation=Dear {0} {1}
-thankYouForRegistering=Thank you for registering with us, we hope you&rsquo;ll enjoy shopping with us.
+thankYouForRegistering=Your Energizer Portal account is activated.
 registeredEmailInfo=Your registered email address is
 instructionsShoppingUrl=To start shopping please click here
 instructionsAccountUrl=To access your account please click here: {0}My Account{1}
 instructionsForgottenPswdUrl=If you forget your password, you can reset it at any time by clicking this link: {0}Update My Password{1}
 instructionsContactUs=If we can help you with any enquiry, please use our {0}Contact Us{1} page, or contact our customer services team directly via phone 1800-383-7323 or email {2}.
-complimentaryClosing=Many Thanks
-signature=Customer Services
+complimentaryClosing=Thanks
+signature=Energizer Portal Team
 help=Help
 contactUs=Contact Us
 contactUsPage=http://www.energizerholdings.com/en/pages/contactus.aspx
 contactUsEmailAddress=customercare@energizer.com
 termsAndCondition=Terms &amp; Conditions
+note=Note:This is an automatically generated email. Please do not reply to this mail.
