--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-forgottenPassword_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-forgottenPassword_en.properties
@@ -6,14 +6,15 @@ myAccount=My Account
 storeFinder=Store Finder
 salutation=Dear {0} {1}
 sentenceAlmostDone=You&rsquo;re almost done.
-sentenceUpdatePswdInstructions=To update your password please click here
-paragraphSecurityNote=Please note: For security purposes this email will expire within {0} minutes. Please update your  password within {1} minutes of requesting the password update.
-paragraphExpiredLink=If the link has already expired, please request an update to your password again here: {0}Request a password update{1}
+sentenceUpdatePswdInstructions=Please click on the link below to reset the password for your Energizer Portal account
+paragraphSecurityNote=Please note that link expires within 30 minutes of receipt of this mail. 
+paragraphExpiredLink= {0}Request a password update{1}
 paragraphContactUs=If we can help you with any enquiry, please use our {0}Contact Us{1} page, or contact our customer services team directly via phone 1800-383-7323 or email {2}.
-complimentaryClosing=Many Thanks
-signature=Customer Services
+complimentaryClosing=Thanks
+signature=Energizer Portal Team
 help=Help
 contactUs=Contact Us
 contactUsPage=http://www.energizerholdings.com/en/pages/contactus.aspx
 contactUsEmailAddress=customercare@energizer.com
 termsAndCondition=Terms &amp; Conditions
+note=Note:This is an automatically generated email. Please do not reply to this mail.
