--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-deliverySent_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-deliverySent_en.properties
@@ -1,11 +1,11 @@
 ## Please note that the syntax of the property name should be as follows:
 ## propertyName=some string
 ## Please DO NOT USE, property.name=some string
-emailSubject=Your Order {0} has been shipped
+emailSubject= Order {0} is SHIPPED
 myAccount=My Account
 storeFinder=Store Finder
 salutation=Hi 
-thankYouForOrder=Thank you for shopping with us. We would like to provide you with an update on your recent purchase.
+thankYouForOrder= Your Order {0} is SHIPPED 
 shippedItems=The following item(s) from Order {0}{1}{2} have been shipped:
 quantity=Ordered Quantity
 itemPrice=Ordered Item Price
@@ -14,8 +14,8 @@ free=$0.00
 track=You can track your delivery here: {0}
 paragraphContactUs=If we can help you with any enquiry, please check our {0}FAQ page{1}, use our {2}Contact Us{3} page, or contact our customer services team directly via phone 1800-383-7323 or email {4}.
 paragraphContactUs_electronics=If we can help you with any enquiry, please use our {0}Contact Us{1} page, or contact our customer services team directly via phone 1800-383-7323 or email {2}.
-complimentaryClosing=Many Thanks
-signature=Customer Services
+complimentaryClosing= Thanks
+signature=Energizer Portal Team
 help=Help
 contactUs=Contact Us
 contactUsPage=http://www.hybris.com/en/contact
@@ -38,3 +38,4 @@ adjustedQty =Adjusted Quantity
 adjustedPrice = Adjusted Price
 adjustedTotalPrice = Adjusted Total Price
 uom=UOM
+note=Note:This is an automatically generated email. Please do not reply to this mail.
