--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderCancelled_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderCancelled_en.properties
@@ -1,11 +1,11 @@
 ## Please note that the syntax of the property name should be as follows:
 ## propertyName=some string
 ## Please DO NOT USE, property.name=some string
-emailSubject=Your Order {0} has been Cancelled
+emailSubject= Order {0} is Cancelled
 myAccount=My Account
 storeFinder=Store Finder
 salutation=Dear {0}
-thankYouForOrder=Thank you for shopping with us. We would like to provide you with an update on your recent purchase.
+thankYouForOrder= Your Order {0} is Cancelled
 shippedItems=The following item(s) from Order {0}{1}{2} have been cancelled:
 quantity=Ordered Quantity
 itemPrice=Ordered Item Price
@@ -14,10 +14,11 @@ free=FREE
 track=You can track your delivery here: {0}
 paragraphContactUs=If we can help you with any enquiry, please check our {0}FAQ page{1}, use our {2}Contact Us{3} page, or contact our customer services team directly via phone +44 (0)20 / 7429 4175 or email {4}.
 paragraphContactUs_electronics=If we can help you with any enquiry, please use our {0}Contact Us{1} page, or contact our customer services team directly via phone +44 (0)20 / 7429 4175 or email {2}.
-complimentaryClosing=Many Thanks
-signature=Customer Services
+complimentaryClosing= Thanks
+signature=Energizer Portal Team
 help=Help
 contactUs=Contact Us
 contactUsPage=http://www.energizerholdings.com/en/pages/contactus.aspx
 contactUsEmailAddress=customerservices@hybris.com
 termsAndCondition=Terms &amp; Conditions
+note=Note:This is an automatically generated email. Please do not reply to this mail.
