--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderConfirmation_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderConfirmation_en.properties
@@ -1,14 +1,14 @@
 ## Please note that the syntax of the property name should be as follows:
 ## propertyName=some string
 ## Please DO NOT USE, property.name=some string
-emailSubject=Order Confirmation {0}
+emailSubject=Energizer Order {0}  approved
 myAccount=My Account
 storeFinder=Store Finder
 salutation=Hi
-thankYouForOrder=Your reference number is {0}{1}{2} and the total cost is {3}. This email contains a complete summary of your order. Please retain this confirmation for your records.
+thankYouForOrder= Order {0} is approved.Order details are as below:
 quantity=Quantity
-itemPrice=Item Price
-total=Total
+itemPrice=Price
+total=Total Price
 free=0.00
 purchaseOrderNumber=Purchase Order Number
 costCenter=Cost Center
@@ -28,8 +28,8 @@ paragraphAccountLocation=If you've registered an account with us, the details of
 paragraphCreateAccount=If you do not have an account, why not create an account today? You will check out faster next time by using saved delivery address and payment details.
 paragraphDeliveryInfo=Please see the {0}Delivery Information{1} for further details about receiving your order.
 paragraphContactUs=If we can help you with any enquiry, please use our {0}Contact Us{1} page, or contact our customer services team directly via phone 1800-383-7323 or email {2}.
-complimentaryClosing=Many Thanks
-signature=Customer Services
+complimentaryClosing=Thanks
+signature=Energizer Portal Team
 help=Help
 contactUs=Contact Us
 contactUsPage=http://www.energizerholdings.com/en/pages/contactus.aspx
@@ -39,3 +39,4 @@ receivedPromotions=Received Promotions
 UOM= UOM
 customerMaterialId=Customer Material Id
 erpMaterialId=ERP Material Id
+note=Note:This is an automatically generated email. Please do not reply to this mail.
